buildscript {
    repositories {
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url "https://www.jetbrains.com/intellij-repository/releases/" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath "org.jetbrains.intellij.plugins:gradle-intellij-plugin:1.8.0"
    }
}

plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.8.0'
    // Gradle Changelog Plugin
    id 'org.jetbrains.changelog' version "1.3.1"
    // Gradle Qodana Plugin
    id 'org.jetbrains.qodana' version "0.1.13"
}

//2.1 插件配置
apply plugin: 'org.jetbrains.intellij'
apply plugin: 'org.jetbrains.changelog'
apply plugin: 'org.jetbrains.qodana'
apply plugin: 'java'
apply plugin: 'application'
mainClassName = "com.rapid.develop.core.server.ApplicationServer"

group 'com.linkkou'
version '3.0.0'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11


applicationDefaultJvmArgs = [
        '-javaagent:/Applications/jetbra/fineagent.jar=jetbrains',
        '--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED',
        '--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED']

repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url "https://www.jetbrains.com/intellij-repository/releases" }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    /*compile group: 'com.alibaba', name: 'druid', version: '1.1.23'*/
    /*compile fileTree(dir: 'libs', include: [ '*'])*/
}
/*https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html#intellij-platform-based-products-of-recent-ide-versions*/
intellij {
    pluginName = 'MybatisLog'
    // 开发环境运行时使用的版本
    //version = '2021.1'
    // 沙箱目录位置，用于保存IDEA的设置，默认在build文件下面，防止clean，放在根目录下。
    sandboxDir = "${rootProject.rootDir}/idea-sandbox"
    type = 'IU'
    // 依赖的插件
    //plugins = ['DatabaseTools', 'Velocity']
    //Disables updating since-build attribute in plugin.xml
    updateSinceUntilBuild = false
    downloadSources = false
    localPath = '/Applications/IntelliJ IDEA.app'
}

processResources {
    from('src/main/java') {
        include '**/*.png'
    }
}

patchPluginXml {

}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}